--- a/my_flask/Dockerfile
+++ b/my_flask/Dockerfile
@@ -9,4 +9,4 @@ RUN pip install category_encoders
 
 WORKDIR /
 
-CMD ["gunicorn", "--workers=1", "my_flask:create_app()", "-b", "0.0.0.0:8000"]
+CMD ["gunicorn", "my_flask:create_app()", "--bind=0.0.0.0"]
